--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
-    "next": "15.3.2",
-    "react": "^19.0.0",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
